--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 		<div id="buttons"></div>
-		<div id="messages"></div>
+		<div id="message">Zagrałem kamień! Jeśli Twój ruch to papier, to wygrywasz!</div>
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
